<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/sync_data"
        android:textSize="14sp"/>

    <Button
        android:textColor="@color/primaryColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/synch_my_words"
        android:gravity="left|center_vertical" />


    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_setting"
        android:textSize="14sp"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="161dp"
        android:layout_height="211dp"
        android:id="@+id/image_view_profile"
        android:src="@mipmap/propic"
        android:contentDescription="@string/profile"
        android:layout_gravity="center_horizontal"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_button_camera"
            android:src="@mipmap/camera"
            android:background="@color/white"
            android:layout_weight="1" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_button_attachfle"
            android:contentDescription="@string/attach"
            android:src="@mipmap/attach_file"
            android:background="@color/white"
            android:layout_weight="1"/>
    </LinearLayout>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="text"
        android:textSize="14sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textWebEmailAddress"
        android:textSize="14sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <ImageButton
        android:contentDescription="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/arrow_right"
        android:background="@color/white"
        android:layout_gravity="center_horizontal"
        android:id="@+id/image_button_next"/>

</LinearLayout>