<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/cloud"
    android:gravity="center_horizontal"
    android:backgroundTintMode="screen"
    android:backgroundTint="@color/dim_foreground_disabled_material_dark">


    <ImageView
        android:src="@mipmap/circle_o_notch"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/circle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:id="@+id/image_circle_account_fragment"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/material_grey_600"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_atemail_account_fragment"
            android:layout_weight="1"
            android:contentDescription="@string/at"
            android:src="@mipmap/at"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:id="@+id/email_et_account_fragment"
            android:inputType="textEmailAddress"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:alpha="0.8"
        android:background="@color/material_grey_600"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_lock"
            android:layout_weight="1"
            android:src="@mipmap/lock"
            android:contentDescription="@string/lock" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/password_et_account_fragment"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:textColorHint="@color/white"/>
    </LinearLayout>

    <ImageButton
        android:contentDescription="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/arrow_right"
        android:id="@+id/image_button_next_account"
        android:alpha="0.8"
        android:background="@drawable/abc_list_selector_background_transition_holo_light" />

</LinearLayout>