<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <Spinner
            android:id="@+id/language_selection_1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAlignment="center"
            android:prompt="@string/language"
            android:entries="@array/languages"
            android:background="@color/primaryColor"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/transfer"
            android:id="@+id/swap_input"
            android:contentDescription="@string/swap_input"/>

        <Spinner
            android:id="@+id/language_selection_2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:prompt="@string/language"
            android:entries="@array/languages"
            android:background="@color/primaryColor"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/writeinfo_home_fragment"
        android:hint="@string/info"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:maxLines="1"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mic"
            android:id="@+id/voice_command"
            android:contentDescription="@string/voicesearch"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/arrow_right"
            android:layout_weight="1"
            android:id="@+id/search_home_fragment"
            android:contentDescription="@string/next"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_1"
                android:layout_margin="5dp"
                android:background="@color/color1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_2"
                android:layout_margin="5dp"
                android:background="@color/color2"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_3"
                android:layout_margin="5dp"
                android:background="@color/color3"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_4"
                android:layout_margin="5dp"
                android:background="@color/color4"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_5"
                android:layout_margin="5dp"
                android:background="@color/color5"/>

        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_6"
                android:layout_margin="5dp"
                android:background="@color/color6"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_7"
                android:layout_margin="5dp"
                android:background="@color/color7"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_8"
                android:layout_margin="5dp"
                android:background="@color/color8"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_9"
                android:layout_margin="5dp"
                android:background="@color/color9"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_10"
                android:layout_margin="5dp"
                android:background="@color/color10"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_11"
                android:layout_margin="5dp"
                android:background="@color/color11"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_12"
                android:layout_margin="5dp"
                android:background="@color/color12"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_13"
                android:layout_margin="5dp"
                android:background="@color/color13"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_14"
                android:layout_margin="5dp"
                android:background="@color/color14"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_15"
                android:layout_margin="5dp"
                android:background="@color/color15"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_16"
                android:layout_margin="5dp"
                android:background="@color/color16"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_17"
                android:layout_margin="5dp"
                android:background="@color/color17"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_18"
                android:layout_margin="5dp"
                android:background="@color/color18"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_19"
                android:layout_margin="5dp"
                android:background="@color/color19"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_20"
                android:layout_margin="5dp"
                android:background="@color/color20"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_21"
                android:layout_margin="5dp"
                android:background="@color/color21"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_22"
                android:layout_margin="5dp"
                android:background="@color/color22"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_23"
                android:layout_margin="5dp"
                android:background="@color/color23"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_24"
                android:layout_margin="5dp"
                android:background="@color/color24" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_25"
                android:layout_margin="5dp"
                android:background="@color/color25" />
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/letter_26"
                android:layout_margin="5dp"
                android:background="@color/color26"/>

        </TableRow>
    </TableLayout>
</LinearLayout>